Refactored.